# bookServer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECHTURE.md  README.md  RULES.md  SKILL.md  TASK_TEMPLATE.md  alembic.ini  conftest.py  pyproject.toml
.github/workflows/: .pre-commit-config.yaml  ci.yml  ruff.yml
alembic/: env.py
alembic/versions/: 0ea6ec56b537_removed_google_books_id_from_authors.py  20f71cde105e_initial_schema.py  5fc65ff53c68_initial.py  67aa4347cdff_changed_booksaleinfo_column_names.py  6a106cc5c369_added_buy_link_to_booksaleinfo.py  73c557458dac_changed_booksale_to_booksaleinfo.py  76a85a955b1f_add_token_links_to_bookaccess.py  7f537b1485c1_error_log_table_has_uuid_col.py  937c2f2e0a4e_add_user_book_state.py  951c219cfb9f_dont_remember_db_changes.py  a3b4c1d8a491_changed_booksale_to_booksaleinfo.py  b525cc5b07c5_test.py  c476831a3194_initial_schema.py  c86439fa1681_rename_books_id_to_book_id.py  caa1cfd66674_add_user_book_state.py  e0b4c8d5f2a1_add_error_logs.py  f0d4974656ef_altered_column_name_in_books_for_sale_.py
app/: __init__.py  main.py
app/api/: book_route.py
app/crud/: access_info_crud.py  admin_logs_crud.py  author_crud.py  avatar_crud.py  book_access.py  book_access_crud.py  book_crud.py  book_sale_info_crud.py  book_utils.py  bookcase_crud.py  genre_crud.py  model_conversions.py  shared_queries.py  user_book_attributes_crud.py  user_book_state_crud.py  user_crud.py  user_status_crud.py  volume_info_crud.py
app/db/: admin_logs.py  author.py  book.py  bookcase.py  (+11 more)
frontend/: AGENTS.md  package-lock.json  package.json
(+149 files in other folders)
