[project]
name = "bookserver"
version = "0.1.0"
description = "Application to manage a users book library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "inquirer>=3.4.0",
    "mysqlclient>=2.2.7",
    "pydantic[email]>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
