[project]
name = "bookserver"
version = "0.1.0"
description = "Application to manage a users book library."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "inquirer>=3.4.0",
    "mypy>=1.17.1",
    "mysqlclient>=2.2.7",
    "pre-commit>=4.5.1",
    "pydantic[email]>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "ruff>=0.11.6",
    "sqlalchemy>=2.0.40",
    "ty>=0.0.15",
    "uvicorn>=0.34.2",
]

[tool.ruff]
exclude = ["alembic/", "app/db/test_db_conn.py"]
